[package]
name = "rael"
version = "0.1.3"
edition = "2021"
description = "A simple terminal rendering engine for creating text-based UIs and games."
license = "MIT"
repository = "https://github.com/YoussefDevPro/rael"
homepage = "https://github.com/YoussefDevPro/rael"
keywords = ["terminal", "tui", "console", "graphics", "renderer"]
categories = ["command-line-utilities", "games"]

[dependencies]
crossterm = "0.29.0"
